# aoc2023

./: .gitignore  Cargo.toml  README.md  adder.sh  justfile  pubspec.yaml  pyproject.toml
aoc2023/: __init__.py
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs
test/: day00_test.dart  day01_test.py  day02_test.py  day03_test.py  day04_test.py  day05_test.py  day06_test.py  day07_test.py  day08_test.py  day09_test.py  day10_test.py  day11_test.py  day12_test.py
